Ignore BOKI assets going forward

--- a/.gitignore
+++ b/.gitignore
@@ -105,4 +105,4 @@ Packages/
 Library/PackageCache/
 Assets/Object/BOKI/
 
-# End of https://www.toptal.com/developers/gitignore/api/unity,windows
+# End of https://www.toptal.com/developers/gitignore/api/unity,windowsAssets/Object/BOKI/
